JFRA-00: Adjust layout issues on mobile view

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -46,7 +46,7 @@
 .nav__btns {
 	display: flex;
 	align-items: center;
-	gap: 0.25rem;
+	gap: 0.5rem;
 }
 .change-theme {
 	font-size: 1.25rem;
@@ -178,6 +178,8 @@ button {
 .nav__toggle {
 	font-size: 1.1rem;
 	cursor: pointer;
+	width: 1.1rem;
+	height: 1.1rem;
 }
 .nav__toggle:hover {
 	color: var(--first-color);
