--- a/src/styles/media-queries.css
+++ b/src/styles/media-queries.css
@@ -25,7 +25,7 @@
 		gap: 0.5rem;
 	}
 	.services__container {
-		grid-template-columns: max-content;
+		grid-template-columns: 1fr;
 		justify-content: center;
 	}
 	.services__content {
